--- a/style.css
+++ b/style.css
@@ -42,11 +42,16 @@ body {
 .footer {
   background: #ace0f5;
   border-radius: 20px;
+  padding: 15px 20px;
+  margin-bottom: 20px;
+  border-radius: 20px;
 }
 .Code_example {
   background: #8c9599;
   border-radius: 20px;
 }
-h2 {
-  text-align: center;
+.Code_example {
+  padding: 15px 20px;
+  margin-bottom: 20px;
+  border-radius: 20px;
 }
