--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ body {
   font-size: 16px;
   font-style: normal;
   font-family: "Roboto", sans-serif;
+  width: 900px;
+  margin: 0 auto;
 }
 .bg-red {
   background: #fac9c9;
@@ -49,8 +51,6 @@ body {
 .Code_example {
   background: #8c9599;
   border-radius: 20px;
-}
-.Code_example {
   padding: 15px 20px;
   margin-bottom: 20px;
   border-radius: 20px;
